js complete + add css, exercise complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     />
   </head>
   <body>
+    <section class="container-fluid d-flex align-items-center flex-column">
+      <div id="my-div" class="mb-2 mt-2 p-5 text-center"></div>
+      <div id="second-div" class="p-5 mb-2 text-center"></div>
+
+      <div id="payment" class="p-5 mb-2 text-center">
+        <span>Seleziona un metodo di pagamento</span>
+        <div
+          id="payment-method"
+          class="d-flex justify-content-center gap-2 mt-2"
+        >
+          <i class="fa-brands fa-cc-paypal text-center fs-1 text-center"></i>
+          <i class="fa-duotone fa-solid fa-credit-card fs-1 text-center"></i>
+        </div>
+      </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
